Working Netty 4 version